fix background on mobile bug?

--- a/css/power.css
+++ b/css/power.css
@@ -22,7 +22,7 @@
 }
 .spaceBG {
   height: 100vh;
-  min-height: 500px;
+  min-height: 100%;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
